# nlopt_example

./: .gitignore  CMakeLists.txt
src/: sqp_example.cpp
